--- a/models/entity/allay/snowpfp.geo.json
+++ b/models/entity/allay/snowpfp.geo.json
@@ -3,7 +3,7 @@
 	"minecraft:geometry": [
 		{
 			"description": {
-				"identifier": "geometry.allay",
+				"identifier": "geometry.snowpfp",
 				"texture_width": 48,
 				"texture_height": 48,
 				"visible_bounds_width": 3,
