--- a/render_controllers/happy_ghast.render_controllers.json
+++ b/render_controllers/happy_ghast.render_controllers.json
@@ -2,16 +2,30 @@
   "format_version": "1.10.0",
   "render_controllers": {
     "controller.render.happy_ghast_snow": {
-      "geometry": "query.is_name_any('Villager Helicopter§o§m§a§r') ? geometry.villager_copter:(Geometry.default)",
-      "materials": [ { "*": "Material.default" } ],
-      "textures": [ "query.is_name_any('Villager Helicopter§o§m§a§r') ? texture.villager_copter:(query.is_baby ? Texture.ghastling : Texture.happy_ghast)" ]
+      "geometry": "q.is_name_any('Villager Helicopter§o§m§a§r') ? geometry.villager_copter:(Geometry.default)",
+      "materials": [
+        {
+          "*": "Material.default"
+        }
+      ],
+      "textures": [
+        "q.is_name_any('Villager Helicopter§o§m§a§r') ? texture.villager_copter:(q.is_baby ? Texture.ghastling : Texture.happy_ghast)"
+      ]
     },
     "controller.render.happy_ghast_ropes": {
       "geometry": "Geometry.ropes",
-      "materials": [ { "*": "Material.default" } ],
-      "textures": [ "query.is_name_any('Villager Helicopter§o§m§a§r') ? texture.blank:(Texture.ropes)" ],
+      "materials": [
+        {
+          "*": "Material.default"
+        }
+      ],
+      "textures": [
+        "q.is_name_any('Villager Helicopter§o§m§a§r') ? texture.blank:(Texture.ropes)"
+      ],
       "part_visibility": [
-        { "*": "variable.render_ropes" }
+        {
+          "*": "variable.render_ropes"
+        }
       ]
     }
   }
