--- a/animation_controllers/happy_ghast.animation_controllers.json
+++ b/animation_controllers/happy_ghast.animation_controllers.json
@@ -6,7 +6,7 @@
       "states": {
         "default": {
           "animations": [
-            "villager_copter_prop"
+            "move"
           ]
         }
       }
