--- a/entity/happy_ghast.entity.json
+++ b/entity/happy_ghast.entity.json
@@ -10,6 +10,7 @@
         "default": "geometry.happy_ghast",
         "ropes": "geometry.happy_ghast_ropes",
         "villager_copter":"geometry.villager_copter"
+        ,"ghastlypumpkin":"geometry.ghastlypumpkin"
       },
       "textures": {
         "ghastling": "textures/entity/happy_ghast/ghastling",
@@ -17,6 +18,7 @@
         "ropes": "textures/entity/happy_ghast/happy_ghast_ropes",
         "blank":"textures/blank",
         "villager_copter":"textures/entity/happy_ghast/villager_copter"
+        ,"ghastlypumpkin":"textures/entity/happy_ghast/ghastlypumpkin"
       },
       "render_controllers": [
         "controller.render.happy_ghast_snow",
