smol ghast+minor changes

--- a/animation_controllers/happy_ghast.animation_controllers.json
+++ b/animation_controllers/happy_ghast.animation_controllers.json
@@ -26,7 +26,7 @@
       "states": {
         "default": {
           "animations": [
-            "scale"
+            {"scale":"!q.is_name_any('smol')"}
           ]
         }
       }
