Fix ghats, animated fox, and other changes

--- a/animation_controllers/happy_ghast.animation_controllers.json
+++ b/animation_controllers/happy_ghast.animation_controllers.json
@@ -6,7 +6,8 @@
       "states": {
         "default": {
           "animations": [
-            "move"
+            {"move":"!q.is_name_any('smol')"},
+            {"move_smol":"q.is_name_any('smol')"}
           ]
         }
       }
