--- a/models/entity/happy_ghast/happy_ghast_bee.geo.json
+++ b/models/entity/happy_ghast/happy_ghast_bee.geo.json
@@ -1,178 +1,1 @@
-{
-	"format_version": "1.12.0",
-	"minecraft:geometry": [
-		{
-			"description": {
-				"identifier": "geometry.happy_ghast_bee",
-				"texture_width": 64,
-				"texture_height": 64,
-				"visible_bounds_width": 11,
-				"visible_bounds_height": 6.5,
-				"visible_bounds_offset": [0, 2.75, 0]
-			},
-			"bones": [
-				{
-					"name": "body",
-					"pivot": [0.5, 38.5, 0],
-					"cubes": [
-						{
-							"origin": [-21.9, 19.3, -32],
-							"size": [44.8, 44.8, 64],
-							"uv": {
-								"north": {"uv": [10, 10], "uv_size": [7, 7]},
-								"east": {"uv": [0, 10], "uv_size": [10, 7]},
-								"south": {"uv": [27, 10], "uv_size": [7, 7]},
-								"west": {"uv": [17, 10], "uv_size": [10, 7]},
-								"up": {"uv": [10, 0], "uv_size": [7, 10]},
-								"down": {"uv": [17, 10], "uv_size": [7, -10]}
-							}
-						},
-						{
-							"origin": [10.1, 51.3, -51.2],
-							"size": [6.4, 12.8, 19.2],
-							"uv": {
-								"north": {"uv": [5, 3], "uv_size": [1, 2]},
-								"east": {"uv": [2, 3], "uv_size": [3, 2]},
-								"south": {"uv": [9, 3], "uv_size": [1, 2]},
-								"west": {"uv": [6, 3], "uv_size": [3, 2]},
-								"up": {"uv": [5, 0], "uv_size": [1, 3]},
-								"down": {"uv": [6, 3], "uv_size": [1, -3]}
-							}
-						},
-						{
-							"origin": [-15.5, 51.3, -51.2],
-							"size": [6.4, 12.8, 19.2],
-							"uv": {
-								"north": {"uv": [5, 6], "uv_size": [1, 2]},
-								"east": {"uv": [2, 6], "uv_size": [3, 2]},
-								"south": {"uv": [9, 6], "uv_size": [1, 2]},
-								"west": {"uv": [6, 6], "uv_size": [3, 2]},
-								"up": {"uv": [5, 3], "uv_size": [1, 3]},
-								"down": {"uv": [6, 6], "uv_size": [1, -3]}
-							}
-						}
-					],
-					"locators": {
-						"lead": [-2.7, 32.1, -6.4]
-					}
-				},
-				{
-					"name": "stinger",
-					"parent": "body",
-					"pivot": [0.5, 44.9, 6.4],
-					"cubes": [
-						{
-							"origin": [0.5, 38.5, 32],
-							"size": [0, 6.4, 12.8],
-							"uv": {
-								"north": {"uv": [28, 9], "uv_size": [0, 1]},
-								"east": {"uv": [26, 9], "uv_size": [2, 1]},
-								"south": {"uv": [30, 9], "uv_size": [0, 1]},
-								"west": {"uv": [28, 9], "uv_size": [2, 1]},
-								"up": {"uv": [28, 7], "uv_size": [0, 2]},
-								"down": {"uv": [28, 9], "uv_size": [0, -2]}
-							}
-						}
-					]
-				},
-				{
-					"name": "rightwing_bone",
-					"parent": "body",
-					"pivot": [-9.1, 64.1, -19.2],
-					"rotation": [15, -15, 0],
-					"cubes": [
-						{
-							"origin": [-66.7, 64.1, -19.2],
-							"size": [57.6, 0, 38.4],
-							"uv": {
-								"north": {"uv": [6, 24], "uv_size": [9, 0]},
-								"east": {"uv": [0, 24], "uv_size": [6, 0]},
-								"south": {"uv": [21, 24], "uv_size": [9, 0]},
-								"west": {"uv": [15, 24], "uv_size": [6, 0]},
-								"up": {"uv": [6, 18], "uv_size": [9, 6]},
-								"down": {"uv": [15, 24], "uv_size": [9, -6]}
-							}
-						}
-					]
-				},
-				{
-					"name": "leftwing_bone",
-					"parent": "body",
-					"pivot": [10.1, 64.1, -19.2],
-					"rotation": [15, 15, 0],
-					"cubes": [
-						{
-							"origin": [10.1, 64.1, -19.2],
-							"size": [57.6, 0, 38.4],
-							"uv": {
-								"north": {"uv": [15, 30], "uv_size": [9, 0]},
-								"east": {"uv": [9, 30], "uv_size": [6, 0]},
-								"south": {"uv": [30, 30], "uv_size": [9, 0]},
-								"west": {"uv": [24, 30], "uv_size": [6, 0]},
-								"up": {"uv": [15, 24], "uv_size": [9, 6]},
-								"down": {"uv": [24, 30], "uv_size": [9, -6]}
-							}
-						}
-					]
-				},
-				{
-					"name": "leg_front",
-					"parent": "body",
-					"pivot": [10.1, 19.3, -12.8],
-					"cubes": [
-						{
-							"origin": [-21.9, 6.5, -12.8],
-							"size": [44.8, 12.8, 0],
-							"uv": {
-								"north": {"uv": [26, 1], "uv_size": [7, 2]},
-								"east": {"uv": [26, 1], "uv_size": [0, 2]},
-								"south": {"uv": [33, 1], "uv_size": [7, 2]},
-								"west": {"uv": [33, 1], "uv_size": [0, 2]},
-								"up": {"uv": [26, 1], "uv_size": [7, 0]},
-								"down": {"uv": [33, 1], "uv_size": [7, 0]}
-							}
-						}
-					]
-				},
-				{
-					"name": "leg_mid",
-					"parent": "body",
-					"pivot": [10.1, 19.3, 0],
-					"cubes": [
-						{
-							"origin": [-21.9, 6.5, 0],
-							"size": [44.8, 12.8, 0],
-							"uv": {
-								"north": {"uv": [26, 3], "uv_size": [7, 2]},
-								"east": {"uv": [26, 3], "uv_size": [0, 2]},
-								"south": {"uv": [33, 3], "uv_size": [7, 2]},
-								"west": {"uv": [33, 3], "uv_size": [0, 2]},
-								"up": {"uv": [26, 3], "uv_size": [7, 0]},
-								"down": {"uv": [33, 3], "uv_size": [7, 0]}
-							}
-						}
-					]
-				},
-				{
-					"name": "leg_back",
-					"parent": "body",
-					"pivot": [10.1, 19.3, 12.8],
-					"cubes": [
-						{
-							"origin": [-21.9, 6.5, 12.8],
-							"size": [44.8, 12.8, 0],
-							"uv": {
-								"north": {"uv": [26, 5], "uv_size": [7, 2]},
-								"east": {"uv": [26, 5], "uv_size": [0, 2]},
-								"south": {"uv": [33, 5], "uv_size": [7, 2]},
-								"west": {"uv": [33, 5], "uv_size": [0, 2]},
-								"up": {"uv": [26, 5], "uv_size": [7, 0]},
-								"down": {"uv": [33, 5], "uv_size": [7, 0]}
-							}
-						}
-					]
-				}
-			]
-		}
-	]
-}
+{"format_version":"1.12.0","minecraft:geometry":[{"description":{"identifier":"geometry.happy_ghast_bee","texture_width":64,"texture_height":64,"visible_bounds_width":11,"visible_bounds_height":6.5,"visible_bounds_offset":[0,2.75,0]},"bones":[{"name":"body","pivot":[0.5,38.5,0],"cubes":[{"origin":[-21.9,19.3,-32],"size":[44.8,44.8,64],"uv":{"north":{"uv":[10,10],"uv_size":[7,7]},"east":{"uv":[0,10],"uv_size":[10,7]},"south":{"uv":[27,10],"uv_size":[7,7]},"west":{"uv":[17,10],"uv_size":[10,7]},"up":{"uv":[10,0],"uv_size":[7,10]},"down":{"uv":[17,10],"uv_size":[7,-10]}}},{"origin":[10.1,51.3,-51.2],"size":[6.4,12.8,19.2],"uv":{"north":{"uv":[5,3],"uv_size":[1,2]},"east":{"uv":[2,3],"uv_size":[3,2]},"south":{"uv":[9,3],"uv_size":[1,2]},"west":{"uv":[6,3],"uv_size":[3,2]},"up":{"uv":[5,0],"uv_size":[1,3]},"down":{"uv":[6,3],"uv_size":[1,-3]}}},{"origin":[-15.5,51.3,-51.2],"size":[6.4,12.8,19.2],"uv":{"north":{"uv":[5,6],"uv_size":[1,2]},"east":{"uv":[2,6],"uv_size":[3,2]},"south":{"uv":[9,6],"uv_size":[1,2]},"west":{"uv":[6,6],"uv_size":[3,2]},"up":{"uv":[5,3],"uv_size":[1,3]},"down":{"uv":[6,6],"uv_size":[1,-3]}}}],"locators":{"lead":[-2.7,32.1,-6.4]}},{"name":"stinger","parent":"body","pivot":[0.5,44.9,6.4],"cubes":[{"origin":[0.5,38.5,32],"size":[0,6.4,12.8],"uv":{"north":{"uv":[28,9],"uv_size":[0,1]},"east":{"uv":[26,9],"uv_size":[2,1]},"south":{"uv":[30,9],"uv_size":[0,1]},"west":{"uv":[28,9],"uv_size":[2,1]},"up":{"uv":[28,7],"uv_size":[0,2]},"down":{"uv":[28,9],"uv_size":[0,-2]}}}]},{"name":"rightwing_bone","parent":"body","pivot":[-9.1,64.1,-19.2],"rotation":[15,-15,0],"cubes":[{"origin":[-66.7,64.1,-19.2],"size":[57.6,0,38.4],"uv":{"north":{"uv":[6,24],"uv_size":[9,0]},"east":{"uv":[0,24],"uv_size":[6,0]},"south":{"uv":[21,24],"uv_size":[9,0]},"west":{"uv":[15,24],"uv_size":[6,0]},"up":{"uv":[6,18],"uv_size":[9,6]},"down":{"uv":[15,24],"uv_size":[9,-6]}}}]},{"name":"leftwing_bone","parent":"body","pivot":[10.1,64.1,-19.2],"rotation":[15,15,0],"cubes":[{"origin":[10.1,64.1,-19.2],"size":[57.6,0,38.4],"uv":{"north":{"uv":[15,30],"uv_size":[9,0]},"east":{"uv":[9,30],"uv_size":[6,0]},"south":{"uv":[30,30],"uv_size":[9,0]},"west":{"uv":[24,30],"uv_size":[6,0]},"up":{"uv":[15,24],"uv_size":[9,6]},"down":{"uv":[24,30],"uv_size":[9,-6]}}}]},{"name":"leg_front","parent":"body","pivot":[10.1,19.3,-12.8],"cubes":[{"origin":[-21.9,6.5,-12.8],"size":[44.8,12.8,0],"uv":{"north":{"uv":[26,1],"uv_size":[7,2]},"east":{"uv":[26,1],"uv_size":[0,2]},"south":{"uv":[33,1],"uv_size":[7,2]},"west":{"uv":[33,1],"uv_size":[0,2]},"up":{"uv":[26,1],"uv_size":[7,0]},"down":{"uv":[33,1],"uv_size":[7,0]}}}]},{"name":"leg_mid","parent":"body","pivot":[10.1,19.3,0],"cubes":[{"origin":[-21.9,6.5,0],"size":[44.8,12.8,0],"uv":{"north":{"uv":[26,3],"uv_size":[7,2]},"east":{"uv":[26,3],"uv_size":[0,2]},"south":{"uv":[33,3],"uv_size":[7,2]},"west":{"uv":[33,3],"uv_size":[0,2]},"up":{"uv":[26,3],"uv_size":[7,0]},"down":{"uv":[33,3],"uv_size":[7,0]}}}]},{"name":"leg_back","parent":"body","pivot":[10.1,19.3,12.8],"cubes":[{"origin":[-21.9,6.5,12.8],"size":[44.8,12.8,0],"uv":{"north":{"uv":[26,5],"uv_size":[7,2]},"east":{"uv":[26,5],"uv_size":[0,2]},"south":{"uv":[33,5],"uv_size":[7,2]},"west":{"uv":[33,5],"uv_size":[0,2]},"up":{"uv":[26,5],"uv_size":[7,0]},"down":{"uv":[33,5],"uv_size":[7,0]}}}]}]}]}
